# work-log-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  IMPROVEMENTS.md  Makefile  docker-compose.yml  main.py  memo.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
src/domain/: exceptions.py
src/domain/entities/: chat.py  diary.py  email_verification_code.py  payments_log.py  post.py  user.py
src/domain/interfaces/: ai_chat_bot.py  chat_repository.py  diary_repository.py  email_sender.py  email_verification_code_repository.py  hasher.py  image_generator.py  image_storage.py  jwt_provider.py  payments_repository.py  post_repository.py  random_name_generator.py  refresh_token_repository.py  user_repository.py  verification_code_generator.py
src/domain/services/: auth_service.py  change_password_service.py  chat_history_service.py  diary_service.py  email_verification_service.py  post_service.py  user_profile_service.py
src/infrastructure/: anthropic_ai_chat_bot.py  bcrypt_hasher.py  cloudflare_r2_storage.py  dall_e_image_generator.py  database.py  faker_random_name_generator.py  mongo_chat_repository.py  mongo_diary_repository.py  mongo_email_verification_code_repository.py  mongo_payments_repository.py  mongo_post_repository.py  mongo_refresh_token_repository.py  mongo_user_repository.py  py_jwt_provider.py  random_number_code_generator.py  resend_email_sender.py  send_grid_email_sender.py
src/presentation/: api.py  dependencies.py
src/presentation/routers/: __init__.py  auth.py  chat.py  diary.py  email.py  password.py  (+2 more)
