[project]
name = "dailylog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.115.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "resend>=2.22.0",
    "uvicorn>=0.32.0",
]
