[project]
name = "dailylog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "bcrypt>=5.0.0",
    "faker>=40.4.0",
    "fastapi>=0.115.0",
    "motor>=3.7.1",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "resend>=2.22.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
# 외부 라이브러리 타입 스텁이 없어도 무시
ignore_missing_imports = true
